2000-10-17  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* transports/libta/ctlopen.c:
	    Return NULL, not 'void' in certain silence case.

	* transports/libta/diagnostic.c:
	    Try not to do so verbose diagnostic report over
	    syslog as via TA->scheduler channel.

	* smtpserver/smtpdata.c:
	    Parse possible "contentpolicy" analysis report, and present
	    it (in several cases) to the user.

	* smtpserver/smtphelp.c:
	    Small fixes for help presentation, and parameter recognition.

2000-10-16  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* smtpserver/smtpdata.c, smtpserver/smtphelp.c, smtpserver/smtptls.c,
	  smtpserver/smtpserver.c:
	    Rethought of things, killed the Z_printf() abomination.
	    Also fixed inadverent NULL referral which Eugene Crosser
	    found as well.  (It blocked my incoming email :-( )

	* man/smtpserver.8, smtpserver/contentfilter.c, smtpserver/smtpdata.c:
	    Improved documentation of the CONTENTFILTER INTERFACE
	    ( = wrote it ), and modified a bit of the interface itself.

	* configure.in, proto/smtpserver.conf, smtpserver/cfgread.c,
	  man/smtpserver.8, proto/Makefile.in, 
	    Allow $ZENV expansions in smtpserver's configuration.
	    Thus allow simpler moving of the thing to other location
	    without needing to edit anything but  zmailer.conf  file..
	    Also removed  smtpserver.conf  from autoconfigured protofiles.

	* scheduler/readconfig.c, smtpserver/cfgread.c, transports/sm/sm.c,
	  transports/mailbox/mailbox.c, transports/smtp/smtptls.c, 
	    Changed all instances of macro-in-macro style CPP things
	    of 'SKIPWHILE(testfunction,varname)' to be appropriate
	    'SKIPSPACE(varname)' and 'SKIPTEXT(varname)'.
	    (RedHat 7.0 gcc version does not work correctly with those..)

	* smtpserver/policytest.c, smtpserver/rfc821scn.c,
	  smtpserver/smtpcmds.c, smtpserver/smtpdata.c, smtpserver/smtpetrn.c,
	  smtpserver/smtpserver.c, smtpserver/smtpserver.h,
	  smtpserver/smtphelp.c, smtpserver/mxverify.c: