@@ -1,11 +1,15 @@
 Known/suspected bugs/Missing Features on current ZMailer sources
 
+Wanted done for 3.0:
+  - router  aliases.cf  to have similar 'protocols' feature as
+    domain routing has currently
+  - WEB-based configuration/administration interface
+  - scheduler to kill message/thread online without a need to
+    run  "manual-expirer"
+  - A work-over of the documentation
+
+
 - Everywhere:  Spell-check  (propably -> probably, among others)
-- smtp ta: Less verbose syslogging, not the entire protocol interaction
-           for each recipient.
-	   VERIFY that failed connection to site A won't lead to recipient
-	   diagnostic() calls before all possible MXes/addresses have been
-	   gone thru for connection attempts.
 
 - "Overview" -- revise at least the list subscription instructions;
 		verify also other document files
@@ -75,6 +79,11 @@ router:
 
 
 transports/smtp:
+
+   VERIFY:
+	That failed connection to site A won't lead to recipient
+	diagnostic() calls before all possible MXes/addresses have been
+	gone thru for connection attempts.
 
    BUGLET:
 	Right now we make eminently sensible commentary diagnostics carrying
